--- a/default.css
+++ b/default.css
@@ -141,3 +141,12 @@
     margin-right: .5rem;
     width: 80px;
 }
+.tedirtable-checked td,
+.table .tedirtable-checked td {
+	background-color: #0d6efd;
+	border-color: #0d6efd;
+	color: #fff;
+}
+.tedirtable-invisible {
+    display: none;
+}
